# VLM-YT

./: .gitignore  main.py  pyproject.toml  qwen_batch.py
utils/: prepare_input_data.py
